Resolved notes